assets/section-product-comparison.css
.product-comparison {
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: 90%;
    max-width: 1354px;
    margin: auto;
    flex-wrap: wrap;
    padding-bottom: 50px;
}

.product-comparison-block {
    max-width: calc(100%/3);
    width: 100%;
    text-align: center;
}

.product-comparison-block-padded {
    padding: 0 50px;
}

.product-comparison-block-title, .product-comparison-block-price {
    color: #1D1D1F;
    font-style: normal;
    font-weight: 600;
    font-size: 32px;
    letter-spacing: -0.03em;
    text-transform: capitalize;
}

.product-comparison-block-price {
    line-height: 96%;
}

.product-comparison-block-keyword, .product-comparison-block-desc {
    font-style: normal;
    font-size: 28px;
    line-height: 110%;
    letter-spacing: -0.02em;
    padding: 0 50px;
}

.product-comparison-block-keyword {
    font-weight: 700;
    color: #1E1E1E;
}

.product-comparison-block-desc {
    font-weight: 400;
    color: #757470;
}

.product-comparison-block-button {
    font-style: normal;
    font-weight: 600;
    font-size: 28px;
    line-height: 80%;
    letter-spacing: -0.02em;
}

.learn-more {
    color: #C35E66;
    text-decoration: none;
    font-style: normal;
    font-weight: 400;
    font-size: 24px;
    line-height: 110%;
    letter-spacing: -0.02em;
    transition: .3s ease;
}

.learn-more::after {
    content: url("data:image/svg+xml,<svg width='19' height='14' viewBox='0 0 19 14' fill='none' xmlns='http://www.w3.org/2000/svg'><line y1='6.8999' x2='17.6' y2='6.8999' stroke='%23C35E66'/><path d='M12 1L18 7L12 13' stroke='%23C35E66'/></svg>");
    padding-left: 10px;
    transition: .3s ease;
}

.learn-more:hover::after {
    padding-left: 20px;
}

.product-comparison-block-reduction {
    font-style: normal;
    font-weight: 400;
    font-size: 32px;
    line-height: 130%;
    letter-spacing: -0.03em;
    color: #1D1D1F;
}

.noise-reduction-amount {
    font-weight: 600;
    font-size: 42px;
}

.divider {
    width: 100%;
    background-color: black;
    margin: 2.5em 0;
}

.divider-small {
    margin: 1.5em auto;
}

.reduction-desc {
    font-size: 28px;
    line-height: 110%;
    text-align: center;
    letter-spacing: -0.02em;
    color: #757470;
}

.reduction-desc strong {
    font-weight: 600;
}

.comparison-subheading {
    font-weight: 600;
    font-size: 32px;
    line-height: 110%;
    letter-spacing: -0.03em;   
    color: #1D1D1F; 
}

.icon-perfect-for {
    width: 60px;
    height: 60px;
    object-fit: contain;
    display: block;
    margin: 40px auto;
}

.label-perfect-for {
    display: block;
    color: #1D1D1F;
    font-weight: 400;
    font-size: 28px;
    line-height: 110%;
    letter-spacing: -0.02em;
}

.label-includes-options {
    font-size: 32px;
    line-height: 110%;
    letter-spacing: -0.03em;
    color: #1D1D1F;
}

.product-img {
    display: block;
    margin: auto;
}

.product-details-img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    padding-bottom: 4em;
}

.product-color-options {
    display: flex;
    width: 100%;
    justify-content: center;
    gap: 10px;
}

.pill-swatch {
    width: 30px;
    height: 30px;
    border-radius: 50%;
    display: inline-block !important;
    transition: .3s opacity ease;
}

.pill-swatch:hover {
    opacity: .7;
}

.main-page-title.page-title.h0 {
    font-family: 'Avantt';
    font-weight: 700;
}

